--- a/app/views/forms/housing/member2.html
+++ b/app/views/forms/housing/member2.html
@@ -49,7 +49,8 @@
         namePrefix: "dob-member2",
         fieldset: {
           legend: {
-            text: "What's their date of birth?"
+            text: "What's their date of birth?",
+            classes: "govuk-fieldset__legend--s"
           }
         },
         hint: {
