--- a/app/views/forms/housing/summary.html
+++ b/app/views/forms/housing/summary.html
@@ -10,12 +10,111 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Check your answers
+        Summary
       </h1>
     
-      <p>This is where they would see their answers and get the possibility to modify them if needed.</p>
+      <h2 class="govuk-heading-m sum-heading">About you</h2>
+      <dl class="app-check-your-answers app-check-your-answers--long">
+        <div class="app-check-your-answers__contents">
+          <dt class="app-check-your-answers__question">
+            Your full name
+          </dt>
+          <dd class="app-check-your-answers__answer">
+            John Smith
+          </dd>
+        </div>
 
+        <div class="app-check-your-answers__contents sum-grey">
+          <dt class="app-check-your-answers__question">
+            What's your address
+          </dt>
+          <dd class="app-check-your-answers__answer">
+              22 test street<br>
+              Test Town
+          </dd>
+        </div>
+
+        <div class="app-check-your-answers__contents">
+          <dt class="app-check-your-answers__question">
+            Phone number
+          </dt>
+          <dd class="app-check-your-answers__answer">
+              0141 123 456
+          </dd>
+        </div>
       
+        <div class="app-check-your-answers__contents sum-grey">
+          <dt class="app-check-your-answers__question">
+            Email
+          </dt>
+          <dd class="app-check-your-answers__answer">
+              john.smith@gmail.com
+          </dd>
+        </div>  
+      </dl>
+      <p class="govuk-!-padding-bottom-4"><a href="/forms/housing/about-you.html">Edit your details<span class="govuk-visually-hidden">Edit your details</span></a></p>
+      
+      <h2 class="govuk-heading-m sum-heading">Member 1</h2>
+      <dl class="app-check-your-answers app-check-your-answers--long">
+        <div class="app-check-your-answers__contents">
+          <dt class="app-check-your-answers__question">
+            Their full name
+          </dt>
+          <dd class="app-check-your-answers__answer">
+            Ann Smith
+          </dd>
+        </div>
+
+        <div class="app-check-your-answers__contents sum-grey">
+          <dt class="app-check-your-answers__question">
+            Their relationship to you
+          </dt>
+          <dd class="app-check-your-answers__answer">
+              wife
+          </dd>
+        </div>
+      
+        <div class="app-check-your-answers__contents">
+          <dt class="app-check-your-answers__question">
+            Their date of birth
+          </dt>
+          <dd class="app-check-your-answers__answer">
+              01/02/1986
+          </dd>
+        </div>
+        </dl>
+        <p class="govuk-!-padding-bottom-4"><a href="/forms/housing/member1.html">Edit Member 1 details<span class="govuk-visually-hidden">Edit Member1</span></a></p>
+
+        <h2 class="govuk-heading-m sum-heading">Member 2</h2>
+        <dl class="app-check-your-answers app-check-your-answers--long">
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
+              Their full name
+            </dt>
+            <dd class="app-check-your-answers__answer">
+              Duncan Smith
+            </dd>
+          </div>
+  
+          <div class="app-check-your-answers__contents sum-grey">
+            <dt class="app-check-your-answers__question">
+              Their relationship to you
+            </dt>
+            <dd class="app-check-your-answers__answer">
+                son
+            </dd>
+          </div>
+        
+          <div class="app-check-your-answers__contents">
+            <dt class="app-check-your-answers__question">
+              Their date of birth
+            </dt>
+            <dd class="app-check-your-answers__answer">
+                09/10/2005
+            </dd>
+          </div>
+          </dl>
+          <p class="govuk-!-padding-bottom-4"><a href="/forms/housing/member2.html">Edit Member 2 details<span class="govuk-visually-hidden">Edit Member2</span></a></p>
      
       <h2 class="govuk-heading-m">Now send your response</h2>
       <p>By submitting you are confirming that, to the best of your knowledge, the details you're providing are correct.</p>
