fix problem of alignment - add chatbot links

--- a/app/views/components/errors.html
+++ b/app/views/components/errors.html
@@ -12,7 +12,8 @@
       <h1 class="govuk-heading-xl">
         Errors
       </h1>
-      <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/error-message/" target="_blank" rel="noopener">Link for error messages</a></p>
+      <p><strong class="govuk-tag black">GDS reference</strong></p>
+      <p><a href="https://design-system.service.gov.uk/components/error-message/" target="_blank" rel="noopener">Link for error messages</a></p>
       <p><a href="https://design-system.service.gov.uk/components/error-summary/" target="_blank" rel="noopener">Link for error summary</a></p>
       <p><a href="https://github.com/alphagov/govuk-design-system-backlog/issues/47" target="_blank" rel="noopener">Link to Github</a></p>
     
