--- a/app/views/components/inputs.html
+++ b/app/views/components/inputs.html
@@ -12,7 +12,8 @@
       <h1 class="govuk-heading-xl">
         Inputs
       </h1>
-      <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/text-input/" target="_blank" rel="noopener">Link to inputs</a></p>
+      <p><strong class="govuk-tag black">GDS reference</strong></p>
+      <p><a href="https://design-system.service.gov.uk/components/text-input/" target="_blank" rel="noopener">Link to inputs</a></p>
       <p><a href="https://design-system.service.gov.uk/components/select/" target="_blank" rel="noopener">Link to select</a></p>
       <p><a href="https://design-system.service.gov.uk/components/textarea/" target="_blank" rel="noopener">Link to text area</a></p>
       <hr class="govuk-section-break govuk-section-break--l">
