--- a/app/views/useful-links.html
+++ b/app/views/useful-links.html
@@ -50,6 +50,22 @@
             </ul>
           </details>
 
+          <details class="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Chatbots
+                </span>
+              </summary>
+              <ul class="govuk-list govuk-list--bullet">
+                <li><a href="https://guild.co/blog/five-reasons-why-chatbots-will-transform-customer-service/" target="_blank" rel="noopener">Five reasons why chatbots will transform customer service</a></li>
+                <li><a href="https://www.marutitech.com/complete-guide-chatbots/" target="_blank" rel="noopener">Complete guide on chatbots</a></li>
+                <li><a href="https://www.marutitech.com/complete-guide-bot-frameworks/" target="_blank" rel="noopener">Complete guide on bot frameworks</a></li>
+                <li><a href="https://blog.prototypr.io/a-guide-to-developing-bot-personalities-c6eba213d77b" target="_blank" rel="noopener">A guide to developing bot personalities</a></li>
+                <li><a href="https://digit.fyi/ms-call-centre-chatbot-ai/" target="_blank" rel="noopener">M&S to Replace Call Centre Staff with Chatbot AI</a></li>
+                <li><a href="https://medium.com/analytics-vidhya/building-a-simple-chatbot-in-python-using-nltk-7c8c8215ac6e" target="_blank" rel="noopener">Building a Simple Chatbot from Scratch in Python (using NLTK)</a></li>
+                <li><a href="https://uxdesign.cc/how-we-designed-inga-a-delightful-banking-chatbot-for-ing-941d18c4646f" target="_blank" rel="noopener">How we designed Inga, a delightful banking chatbot for ING</a></li>
+              </ul>
+            </details>
 
       <h2 class="govuk-heading-m">Videos</h2>
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/dEbl5jvLKGQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
