--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -15,11 +15,17 @@ $govuk-global-styles: true;
 
 // Patterns that aren't in Frontend
 @import "patterns/check-your-answers";
-@import "patterns/task-list";
-@import "patterns/related-items";
+//@import "patterns/task-list";
+//@import "patterns/related-items";
+@import "patterns/colour-presentation";
 
 // Components that aren't in Frontend
 // @import "components/cookie-banner";
+@import "components/buttons";
+@import "components/images-videos";
+@import "components/message-boxes";
+@import "components/breadcrumbs";
+
 
 $erc-text-blue : #004269; 
 $erc-logo-blue: #0071BA;
@@ -56,14 +62,9 @@ footer {
     }
 }
 
-
 //---------------------------------------- BODY------------------------------------------------//
 
 body p {
-    color: $erc-text-blue;
-}
-
-.erc-text-blue {
     color: $erc-text-blue;
 }
 
@@ -96,66 +97,24 @@ body p {
     }
 }
 
-//-------------------------------------------- Buttons --------------------------------------------------- //
 
-.button-primary {
-    background-color : #518418; 
+// ------------------------------------------- GOVUK changes for colours ------------------------------------------------- //
+
+// back button/link
+.govuk-back-link:link,  .govuk-back-link:active, .govuk-back-link:hover, .govuk-back-link:focus, .govuk-back-link:visited {
+    color: $erc-text-blue;
+    margin-bottom: 2em;
 }
 
-.govuk-button:hover.button-primary, .govuk-button:focus.button-primary  {
-    background-color : #436c14;
-}
-
-
-.button-secondary {
-    background-color : #cecece ;
-    color: black;
-}
-
-.govuk-button:active.button-secondary, .govuk-button:link.button-secondary, .govuk-button:visited.button-secondary {
-    background-color :  #cecece ;
-    color: black;
-}
-
-.govuk-button:hover.button-secondary, .govuk-button:focus.button-secondary  {
-    background-color : #dddddd;
-    color: black;
-}
-
-
-.button-warning {
-    background-color : #b10e1e  ;
-}
-
-.govuk-button:hover.button-warning {
-    background-color : #df3034  ;
-}
-
-.govuk-button:focus.button-warning {
-    background-color : #df3034 ;
-}
-
-// ------------------------------------------- GOVUK variable changes for colours ------------------------------------------------- //
-
-.govuk-heading-xl {
+.govuk-heading-xl, .govuk-heading-l, .govuk-heading-m, .govuk-list , .erc-text-blue {
     color: $erc-text-blue;
 }
 
-.govuk-heading-l {
-    color: $erc-text-blue;
-}
 
-.govuk-heading-m {
-    color: $erc-text-blue;
-}
-
-.govuk-list {
-    color: $erc-text-blue;
-}
-
-.govuk-link, a {
+.govuk-link, a, .govuk-link:link, a:link {
     color: 	#0000ee;
 }
+
 
 // not implemented as it messes up the hover and is close enough anyway
 // .govuk-link:visited, a:visited {
@@ -167,8 +126,6 @@ body p {
 //     color: #ffffff;
 //     background: #444
 // }
-
-
 
 .govuk-error-message, .govuk-error-summary, .govuk-input--error {
     color: #B30000 
@@ -185,18 +142,13 @@ body p {
 
 // -------------------------------------------- Helpers ------------------------------------------------- //
 
-// back button/link
-.govuk-back-link:link,  .govuk-back-link:active, .govuk-back-link:hover, .govuk-back-link:focus, .govuk-back-link:visited {
-    color: $erc-text-blue;
-    margin-bottom: 2em;
-}
 
 .validated {
     border: 2px solid #008000;
 }
 
 .input-read-only {
-background: #ececec;
+    background: #ececec;
 }
 
 .design-notes{
@@ -229,280 +181,3 @@ background: #ececec;
     margin-left: 10px;
     padding: 5px;
 }
-  
-
-// --------------------------------------- images - videos --------------------------------------------//
-
-iframe{
-    @media only screen and (max-width: 580px) { 
-        width: 100%;
-        height: auto;
-
-    }
-}
-
-img{
-    @media only screen and (max-width: 580px) { 
-        max-width: 100%;
-        height: auto;
-    }
-}
-
-// ---------------------------------------- summary table ---------------------------------------------------//@at-root
-
-
-
-.sum__table{
-    width:100%;
-    border:0 solid #fff
-}
-.sum__cell{
-    width:50%;
-    vertical-align:top;
-    box-sizing:border-box;
-    padding:10px 0;
-    border:0 solid #fff
-}
-.sum__cell--value{
-    word-break:break-all
-}
-.sum__cell--multi{
-    font-weight:bold;
-    font-size:1.125rem;
-    border-bottom:1px solid #ccc;
-    padding:30px 10px 10px 0;
-    background-color:transparent
-}
-.sum__row:first-of-type .sum__cell--multi:first-of-type{
-    padding:0 10px 10px 0
-}
-.sumpagetable{
-    width:100%;
-    border:0 solid #fff
-}
-.sumlabel,.sumvalue{
-    width:50%;
-    vertical-align:top;
-    box-sizing:border-box;
-    padding:10px 0;
-    border:0 solid #fff
-}
-.sumvalue{
-    word-break:break-all
-}
-.sumcontainer{
-    font-weight:bold;
-    font-size:1.75em;
-    border:0;
-    border-bottom:1px solid #ccc;
-    padding:30px 10px 10px 0;
-    background-color:transparent
-}
-sumpagetable tr:first-of-type .sumcontainer:first-of-type{
-    padding:0 10px 10px 0
-}
-
-// ----------------------------------------  colours display--------------------------------------------------//
-
- .app-colour-list {
-     width: 100%;
-     border-collapse: collapse;
-   }
-  .app-colour-list-row {
-    display: table-row;
-    margin-bottom: 10px;
-    border-bottom: 10px solid transparent;
-  }
-  @media (min-width: 61.25em) {
-    .app-colour-list-row {
-      display: table-row;
-      margin: auto;
-      border-bottom: 0;
-    }
-  }
-  .app-colour-list-column {
-    display: block;
-    position: relative;
-    padding-left: 50px;
-  }
-  @media (min-width: 61.25em) {
-    .app-colour-list-column {
-      display: table-cell;
-      padding-left: 0;
-      vertical-align: middle;
-    }
-  }
-  .app-swatch {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 40px;
-    border: 1px solid transparent;
-    border-radius: 50%;
-  }
-  @media (min-width: 61.25em) {
-    .app-swatch {
-      display: inline-block;
-      position: static;
-      margin-top: 6px;
-      margin-right: 10px;
-      margin-bottom: 7px;
-      vertical-align: middle;
-    }
-  }
-//   .app-swatch-border {
-//     border-color: #bfc1c3;
-//   }
-  .app-colour-list-column--name {
-    font-weight: normal;
-    text-align: left;
-  }
-  @media (min-width: 61.25em) {
-    .app-colour-list-column--name {
-      width: 50%;
-    }
-  }
-  @media (min-width: 61.25em) {
-    .app-colour-list-column--colour {
-      width: 15%;
-    }
-  }
-  @media (min-width: 61.25em) {
-    .app-colour-list-column--notes {
-      width: 35%;
-    }
-  }
-
-//--------------------------------------- message boxes and panels-----------------------------------------------//
-
-.panel-warning {
-    background-color: #c67f0f;
-}
-
-.panel-information {
-  background-color: #005ea5;
-  }
-
-  .panel-error {
-      background-color: #B30000;
-  }
-
-  .panel-warning {
-      background-color: #c67f0f;
-  }
-
-  .panel-info {
-      background-color: #005ea5;
-  }
-
-.ercError,
-.ercInformation,
-.ercSuccess,
-.ercWarning {
-  display: block;
-  margin: 15px !important;
-  padding: 15px 10px 15px 50px !important;
-  border-radius: 5px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-  overflow: auto;
-}
-.ercInformation {
-  color: #004269;
-  background: url(../images/ERC/erc_information.gif) 10px center no-repeat #bde5f8;
-  border: 1px solid #004269;
-}
-.ercSuccess {
-  color: #2d4f2a;
-  background: url(../images/ERC/erc_success.gif) 10px center no-repeat #dff2bf;
-  border: 1px solid #2d4f2a;
-}
-.ercWarning {
-  color: #782a06;
-  background: url(../images/ERC/erc_warning.gif) 10px center no-repeat #feefb3;
-  border: 1px solid #782a06;
-}
-.ercError {
-  color: #333333;
-  background: url(../images/ERC/erc_error.gif) 10px center no-repeat #ffbaba;
-  border: 1px solid #d8000c;
-}
-
-.ercInformation.bootstrap {
-    color: #31708f;
-    background: url(../images/ERC/erc_information.gif) 10px center no-repeat #d9edf7;
-    border: 1px solid #bcdff1;
-  }
-  .ercSuccess.bootstrap {
-    color: #3c763d ;
-    background: url(../images/ERC/erc_success.gif) 10px center no-repeat #dff0d8;
-    border: 1px solid #d0e9c6;
-  }
-  .ercWarning.bootstrap {
-    color: #8a6d3b ;
-    background: url(../images/ERC/erc_warning.gif) 10px center no-repeat #fcf8e3;
-    border: 1px solid #faf2cc;
-  }
-  .ercError.bootstrap {
-    color: #a94442;
-    background: url(../images/ERC/erc_error.gif) 10px center no-repeat #f2dede;
-    border: 1px solid #ebcccc;
-  }
-
-  .ercInformation.no-border {
-    color: #004269;
-    background: url(../images/ERC/erc_information.gif) 10px center no-repeat #bde5f8;
-    border: 0px;
-  }
-  .ercSuccess.no-border {
-    color: #2d4f2a;
-    background: url(../images/ERC/erc_success.gif) 10px center no-repeat #dff2bf;
-    border: 0px;
-  }
-  .ercWarning.no-border {
-    color: #782a06;
-    background: url(../images/ERC/erc_warning.gif) 10px center no-repeat #feefb3;
-    border: 0px;
-  }
-  .ercError.no-border {
-    color: #333333;
-    background: url(../images/ERC/erc_error.gif) 10px center no-repeat #ffbaba;
-    border: 10px;
-  }
-//---------------------------------------- BREADCRUMBS ------------------------------------------------//
-/* #breadcrumb-erc {
-    margin-top: 8px;
-    margin-bottom: 20px;
-    width: 940px;
-    height: auto;
-    overflow:auto;
-    text-align:left;
-    clear:both;
-    background: 0 0;
-    color: #004269;
-    li {
-        color: #004269;
-    }
-    ul {
-        list-style: none;
-        padding-left: 0;
-    }
-    #crumb-home-active {
-        width:74px;
-        overflow: hidden;
-    }
-    #crumb-home-active span{
-        float:left;
-        padding:6px 28px 6px 10px;
-        color:#fff;
-        background:url(../images/ERC/sprite.png) 0 -59px no-repeat #004269;
-        height:21px;
-        width:36px;
-        font-family: "nta", Arial, sans-serif;
-    }
-    .crumbs-erc {
-        height:100%;
-        display:inline;
-    }
-} */
