fix some contractions and wording in P1 form

--- a/app/views/forms/education/child-name.html
+++ b/app/views/forms/education/child-name.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          What is the P1 child name?
+          What's the P1 child's name?
       </h1>
       <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
