--- a/app/views/forms/education/manual-address.html
+++ b/app/views/forms/education/manual-address.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          What is your address?
+          What's your address?
       </h1>
 
       <p>As we cannot find your postcode, we can't verify your catchment school. You can still apply.</p>
