--- a/app/views/forms/education/nursery.html
+++ b/app/views/forms/education/nursery.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          What is the child's current nursery?
+          What's the child's current nursery?
       </h1>
       <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
