--- a/app/views/forms/education/summary.html
+++ b/app/views/forms/education/summary.html
@@ -71,7 +71,7 @@
       <dl class="app-check-your-answers app-check-your-answers--long">
         <div class="app-check-your-answers__contents">
           <dt class="app-check-your-answers__question">
-            P1 child's name
+            Name
           </dt>
           <dd class="app-check-your-answers__answer">
               {{ data['child-first-name'] }}&nbsp;
