--- a/app/views/forms/education/child-dob.html
+++ b/app/views/forms/education/child-dob.html
@@ -18,7 +18,7 @@
         namePrefix: "dob",
         fieldset: {
           legend: {
-            text: "What is the P1 child's date of birth?",
+            text: "What's the P1 child's date of birth?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
