--- a/app/views/forms/education/child-gender.html
+++ b/app/views/forms/education/child-gender.html
@@ -20,7 +20,7 @@
         value: data['gender'],
         fieldset: {
           legend: {
-            text: "What is the P1 child's gender?",
+            text: "What's the P1 child's gender?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
