--- a/app/views/forms/education/email.html
+++ b/app/views/forms/education/email.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          What is your email address?
+          What's your email address?
       </h1>
       <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
