--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          What is your address?
+          What's your address?
       </h1>
 
       <form class="form" method="post">
