reword the hint about catchment school full

--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -20,7 +20,7 @@
           classes: "govuk-!-font-size-36"
         },
         hint: {
-          text: "We will use this information if your catchment school is full."
+          text: "We use this information if your catchment school is full."
         },
         items: [
           {
