--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -26,7 +26,7 @@
           }
         },
         hint: {
-          text: "If your catchment school is full, we will take this information into account. We'll ask you for evidence of this later."
+          text: "We use this information if your catchment school is full. We'll ask you for evidence of this later."
         },
         items: [
           {
