--- a/app/views/forms/education/single.html
+++ b/app/views/forms/education/single.html
@@ -26,7 +26,7 @@
           }
         },
         hint: {
-          text: "If your catchment school is full, we will take this information into account."
+          text: "We use this information if your catchment school is full."
         },
         items: [
           {
