--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -102,7 +102,7 @@
               #fff / #444
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
-              <span style="color: #ffffff; text-decoration: underline; background: #444">this looks like a link - hover</span><br>
+              <span style="color: #ffffff; text-decoration: underline; background: #444 ; padding: 0 8px;">this looks like a link - hover</span><br>
               not used in the prototype, not very accessible
             </td>
           </tr>
@@ -142,7 +142,7 @@
             #0b0c0c / #ffbf47
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            <span style="color: #0b0c0c; text-decoration: underline; background-color: #ffbf47">GDS link - focus</span><br>
+            <span style="color: #0b0c0c; text-decoration: underline; background-color: #ffbf47; padding: 0 8px;">GDS link - focus</span><br>
             used in the prototype
           </td>
         </tr>
@@ -155,7 +155,7 @@
                 #b9ff06 / #444
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
-              <span style="background-color: #444; text-decoration: underline; color: #b9ff06">ERC link - focus/active</span><br>
+              <span style="background-color: #444; text-decoration: underline; color: #b9ff06 ; padding: 0 8px;">ERC link - focus/active</span><br>
               not used in the prototype, not very accessible and not consistent with other focus visuals
             </td>
           </tr>
@@ -234,7 +234,60 @@
                 footer - This is a prototype tag
             </td>
           </tr>
+          <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#ddebf1"></span>
+              <code>ERC light blue panels</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+              #ddebf1
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              <span style="color: #004269; background-color: #ddebf1; ; padding: 0 8px;">a panel</span>
+            </td>
+          </tr>
+          
+          <tr class="app-colour-list-row">
+              <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+                <span class="app-swatch " style="background-color:#d5e6aa"></span>
+                <code>ERC light green panels</code>
+              </th>
+              <td class="app-colour-list-column app-colour-list-column--colour">
+                #d5e6aa
+              </td>
+              <td class="app-colour-list-column app-colour-list-column--notes">
+                <span style="color: #004269; background-color: #d5e6aa; ; padding: 0 8px;">a panel</span>
+              </td>
+            </tr>
+
+          <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#004269"></span>
+              <code>ERC dark blue menu headers</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+              #004269 / #fff
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              same as text colour<br>
+              <span style="background-color: #004269; color: #fff; ; padding: 0 8px; font-weight: 600">heading menu</span>
+            </td>
+          </tr>
   
+          <tr class="app-colour-list-row">
+              <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+                <span class="app-swatch " style="background-color:#444"></span>
+                <code>ERC grey menu selected</code>
+              </th>
+              <td class="app-colour-list-column app-colour-list-column--colour">
+                #444 / #ddebf1
+              </td>
+              <td class="app-colour-list-column app-colour-list-column--notes">
+                same as text colour<br>
+                <span style="background-color: #444; color: #ddebf1; ; padding: 0 8px; font-weight: 600">menu selected</span>
+              </td>
+            </tr>
+
           <tr class="app-colour-list-row">
             <th class="app-colour-list-column app-colour-list-column--name" scope="row">
               <span class="app-swatch " style="background-color:#ececec"></span>
