add a bot on the homepage and link to landbot.io in the useful links

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -29,4 +29,12 @@
     </div>
 </div>
 
+<script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
+<script>
+  var myLandbotLivechat = new LandbotLivechat({
+    index: 'https://landbot.io/u/H-97262-YRS0QP9AAV8IXYGH/index.html',
+  });
+</script>
+
+
 {% endblock %}
