--- a/app/views/useful-links.html
+++ b/app/views/useful-links.html
@@ -57,7 +57,8 @@
                 </span>
               </summary>
               <ul class="govuk-list govuk-list--bullet">
-                <li><p><a href="https://landbot.io/?fbclid=IwAR0KRtPCudN5bqrUs1Z_uDcnZLtx2Wf7I2ZpDf8Uybe7fB0MMY40DUO1dLI" target="_blank" rel="noopener"><strong>Landbot.io - to prototype</strong></a></li>
+                <li><a href="https://landbot.io/u/H-97262-YRS0QP9AAV8IXYGH/index.html" target="_blank" rel="noopener"><strong>See the ERC Homepage bot in action</strong></a></li>
+                <li><a href="https://landbot.io/?fbclid=IwAR0KRtPCudN5bqrUs1Z_uDcnZLtx2Wf7I2ZpDf8Uybe7fB0MMY40DUO1dLI" target="_blank" rel="noopener"><strong>Landbot.io - to prototype</strong></a></li>
                 <li><a href="https://guild.co/blog/five-reasons-why-chatbots-will-transform-customer-service/" target="_blank" rel="noopener">Five reasons why chatbots will transform customer service</a></li>
                 <li><a href="https://www.marutitech.com/complete-guide-chatbots/" target="_blank" rel="noopener">Complete guide on chatbots</a></li>
                 <li><a href="https://www.marutitech.com/complete-guide-bot-frameworks/" target="_blank" rel="noopener">Complete guide on bot frameworks</a></li>
