change routing and text for new version of the form

--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -12,33 +12,26 @@
       <h1 class="govuk-heading-l">
           Apply online for primary 1 registration
       </h1>
-      <p>This service is for Primary 1 enrolment only.</p>
 
       <h2 class="govuk-heading-m">Before you start</h2>
-      <p>Check this is the right service. You need to:</p>
+      <p>Use this form:</p>
       <ul class="govuk-list govuk-list--bullet">
-          <li>have parental rights and responsibilities for the P1 child</li>
-          <li>live in East Renfrewshire</li>
-          <li>want to enrol at your catchment school</li>
+          <li>to apply for primary 1 enrolment only</li>
+          <li>if you live in East Renfrewshire and are applying to enrol at your catchment school. For other schools, apply for a placing request</li>
+          <li>to enrol if your catchment school even if you're applying to defer primary 1 entry for your child</li>
+          <li>to enrol at your catchment school even if you're moving house and later need to apply to another school</li>
+          <li>if you have parental rights and responsibilities for the child</li>
        </ul>
-
-       <p class="govuk-!-padding-top-4">You can apply to enrol even if you're:</p>
-       <ul class="govuk-list govuk-list--bullet">
-          <li>applying to defer primary 1 entry for your child</li>
-          <li>moving house and later need to apply to another school</li>
-       </ul>
-
-       <p class="govuk-!-padding-top-4">For other schools, you need to <a href="#">apply for a placing request</a>.</p>
-
+       <p class="govuk-!-padding-top-4">You can find out how we use your information in our <a href="/privacy.html">privacy statement</a>.</p>
 
       {% from "button/macro.njk" import govukButton %}
 
       {{ govukButton({
         text: "Start now",
-        href: "/forms/education/postcode.html"
+        href: "/forms/education/moving.html"
       }) }}
 
-      <p class="govuk-!-padding-top-4">You can find out how we use your information in our <a href="/privacy.html">privacy statement</a>.</p>
+  
 
     </div>
 </div>
