--- a/app/views/forms/education/defer.html
+++ b/app/views/forms/education/defer.html
@@ -20,7 +20,7 @@
         value: data['defer'],
         fieldset: {
           legend: {
-            text: "Do you want to defer the child starting school?",
+            text: "Do you want to defer your child starting school?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
