--- a/app/views/forms/education/defer1.html
+++ b/app/views/forms/education/defer1.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Medical
+  Defer
 {% endblock %}
 
 {% block content %}
@@ -15,18 +15,15 @@
 
       {{ govukRadios({
         classes: "govuk-radios",
-        idPrefix: "medical",
-        name: "medical",
-        value: data['medical'],
+        idPrefix: "defer",
+        name: "defer",
+        value: data['defer'],
         fieldset: {
           legend: {
-            text: "Does your child have a medical condition that needs support offered at this school?",
+            text: "Do you want to defer the child starting school?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
-        },
-        hint: {
-          text: "We use this information if your catchment school is full. We'll ask you for evidence of this later."
         },
         items: [
           {
