--- a/app/views/forms/education/medical-details1.html
+++ b/app/views/forms/education/medical-details1.html
@@ -18,7 +18,7 @@
           id: "more-detail",
           value: data['more-detail'],
           label: {
-            text: "Give details of their medical condition",
+            text: "Give details of the medical condition:",
             classes: "govuk-!-font-size-36"
           }
         }) }}
