--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -20,7 +20,7 @@
         value: data['sibling'],
         fieldset: {
           legend: {
-            text: "Will the child have sibling(s) at the school when they start?",
+            text: "Will your child have sibling(s) at the school when they start?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
