--- a/app/views/forms/education/single.html
+++ b/app/views/forms/education/single.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Single parent
+  Single parent or carer
 {% endblock %}
 
 {% block content %}
