--- a/app/views/forms/education/child-gender1.html
+++ b/app/views/forms/education/child-gender1.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Medical
+  Gender
 {% endblock %}
 
 {% block content %}
@@ -15,27 +15,24 @@
 
       {{ govukRadios({
         classes: "govuk-radios",
-        idPrefix: "medical",
-        name: "medical",
-        value: data['medical'],
+        idPrefix: "gender",
+        name: "gender",
+        value: data['gender'],
         fieldset: {
           legend: {
-            text: "Does your child have a medical condition that needs support offered at this school?",
+            text: "What's the P1 child's gender?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
         },
-        hint: {
-          text: "We use this information if your catchment school is full. We'll ask you for evidence of this later."
-        },
         items: [
           {
-            value: "yes",
-            text: "Yes"
+            value: "female",
+            text: "Female"
           },
           {
-            value: "no",
-            text: "No"
+            value: "male",
+            text: "Male"
           }
         ]
       }) }}
@@ -43,8 +40,8 @@
       {{ govukButton({
         "text": "Continue"
         }) }}
-
       </form>
+
     </div>
 </div>
 
