--- a/app/views/forms/education/nursery1.html
+++ b/app/views/forms/education/nursery1.html
@@ -2,33 +2,34 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Phone
+  Nursery
 {% endblock %}
 
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
+      <h1 class="govuk-heading-l">
+          What's the child's current nursery?
+      </h1>
       <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
         label: {
-          text: "Phone",
-          classes: "govuk-!-font-size-27"
+          text: "Enter the name of the nursery (optional)"
         },
-        id: "phone",
-        name: "phone",
-        value: data['phone'],
-        type: "tel",
-        classes: "govuk-input--width-20"
+        classes: "govuk-input--width-20",
+        id: "nursery",
+        name: "nursery",
+        value: data['nursery']
       }) }}
 
       {{ govukButton({
         "text": "Continue"
         }) }}
-    </form>
 
+      </form>
     </div>
 </div>
 
