--- a/app/views/forms/education/parent-name1.html
+++ b/app/views/forms/education/parent-name1.html
@@ -2,33 +2,42 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Phone
+  Parent or carer
 {% endblock %}
 
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">
+          What's your name?
+      </h1>
       <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
         label: {
-          text: "Phone",
-          classes: "govuk-!-font-size-27"
+          text: "Parent or carer's first name"
         },
-        id: "phone",
-        name: "phone",
-        value: data['phone'],
-        type: "tel",
-        classes: "govuk-input--width-20"
+        id: "parent-first-name",
+        name: "parent-first-name",
+        value: data['parent-first-name']
       }) }}
+
+      {{ govukInput({
+        label: {
+          text: "Parent or carer's last name"
+        },
+        id: "parent-last-name",
+        name: "parent-last-name",
+        value: data['parent-last-name']
+      }) }}
+
 
       {{ govukButton({
         "text": "Continue"
         }) }}
-    </form>
-
+      </form>
     </div>
 </div>
 
