--- a/app/views/forms/education/phone1.html
+++ b/app/views/forms/education/phone1.html
@@ -9,13 +9,15 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">
+          What's your phone number?
+      </h1>
       <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
         label: {
-          text: "Phone",
-          classes: "govuk-!-font-size-27"
+          text: "Telephone/Mobile number"
         },
         id: "phone",
         name: "phone",
