--- a/app/views/forms/education/postcode1.html
+++ b/app/views/forms/education/postcode1.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Property postcode
+          What's your address?
       </h1>
 
       <form class="form" method="post">
@@ -24,6 +24,9 @@
         </noscript>
 
       {{ govukInput({
+        label: {
+          text: "Postcode"
+        },
         classes: "govuk-input--width-10",
         id: "postcode",
         name: "postcode",
