--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -10,114 +10,121 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form class="form" method="post">
-      {% from "select/macro.njk" import govukSelect %}
+          {% from "radios/macro.njk" import govukRadios %}
 
-      {{ govukSelect({
-        id: "2nd-school",
-        name: "2nd-school",
-        label: {
-          text: "Select a 2nd choice school",
-          classes: "govuk-!-font-size-36"
-        },
-        hint: {
-          text: "We use this information if your catchment school is full."
-        },
-        items: [
-          {
-            value: "Braidbar Primary School",
-            text: "Braidbar Primary School",
-            selected: true
-          },
-          {
-            value: "Busby Primary School",
-            text: "Busby Primary School"
-          },
-          {
-            value: "Carlibar Primary School",
-            text: "Carlibar Primary School"
-          },
-          {
-            value: "Carlibar Primary School",
-            text: "Carlibar Primary School"
-          },
-          {
-            value: "Crookfur Primary School",
-            text: "Crookfur Primary School"
-          },
-          {
-            value: "Cross Arthurlie Primary School",
-            text: "Cross Arthurlie Primary School"
-          },
-          {
-            value: "Eaglesham Primary School",
-            text: "Eaglesham Primary School"
-          },
-          {
-            value: "Giffnock Primary School",
-            text: "Giffnock Primary School"
-          },
-          {
-            value: "Hillview Primary School",
-            text: "Hillview Primary School"
-          },
-          {
-            value: "Kirkhill Primary School",
-            text: "Kirkhill Primary School"
-          },
-          {
-            value: "Maidenhill Primary School",
-            text: "Maidenhill Primary School"
-          },
-          {
-            value: "Mearns Primary School",
-            text: "Mearns Primary School"
-          },
-          {
-            value: "Neilston Primary School",
-            text: "Neilston Primary School"
-          },
-          {
-            value: "Netherlee Primary School",
-            text: "Netherlee Primary School"
-          },
-          {
-            value: "Our Lady of the Missions Primary School",
-            text: "Our Lady of the Missions Primary School"
-          },
-          {
-            value: "St Cadoc's Primary School",
-            text: "St Cadoc's Primary School"
-          },
-          {
-            value: "St Clare's Primary School",
-            text: "St Clare's Primary School"
-          },
-          {
-            value: "St John's Primary School",
-            text: "St John's Primary School"
-          },
-          {
-            value: "St Joseph's Primary School",
-            text: "St Joseph's Primary School"
-          },
-          {
-            value: "St Mark's Primary School",
-            text: "St Mark's Primary School"
-          },
-          {
-            value: "St Thomas' Primary School",
-            text: "St Thomas' Primary School"
-          },
-          {
-            value: "Thornliebank Primary School",
-            text: "Thornliebank Primary School"
-          },
-          {
-            value: "Uplawmoor Primary School",
-            text: "Uplawmoor Primary School"
-          }
-        ]
-      }) }}
+          {{ govukRadios({
+            classes: "govuk-radios",
+            idPrefix: "2nd-school",
+            name: "2nd-school",
+            fieldset: {
+              legend: {
+                text: "Select preferred alternative school",
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--l"
+              }
+            },
+            hint: {
+              text: "We use this information if your catchment school is full."
+            },
+            items: [
+              {
+                value: "Braidbar Primary School",
+                text: "Braidbar Primary School"
+              },
+              {
+                value: "Busby Primary School",
+                text: "Busby Primary School"
+              },
+              {
+                value: "Carlibar Primary School",
+                text: "Carlibar Primary School"
+              },
+              {
+                value: "Carlibar Primary School",
+                text: "Carlibar Primary School"
+              },
+              {
+                value: "Crookfur Primary School",
+                text: "Crookfur Primary School"
+              },
+              {
+                value: "Cross Arthurlie Primary School",
+                text: "Cross Arthurlie Primary School"
+              },
+              {
+                value: "Eaglesham Primary School",
+                text: "Eaglesham Primary School"
+              },
+              {
+                value: "Giffnock Primary School",
+                text: "Giffnock Primary School"
+              },
+              {
+                value: "Hillview Primary School",
+                text: "Hillview Primary School"
+              },
+              {
+                value: "Kirkhill Primary School",
+                text: "Kirkhill Primary School"
+              },
+              {
+                value: "Maidenhill Primary School",
+                text: "Maidenhill Primary School"
+              },
+              {
+                value: "Mearns Primary School",
+                text: "Mearns Primary School"
+              },
+              {
+                value: "Neilston Primary School",
+                text: "Neilston Primary School"
+              },
+              {
+                value: "Netherlee Primary School",
+                text: "Netherlee Primary School"
+              },
+              {
+                value: "Our Lady of the Missions Primary School",
+                text: "Our Lady of the Missions Primary School"
+              },
+              {
+                value: "St Cadoc's Primary School",
+                text: "St Cadoc's Primary School"
+              },
+              {
+                value: "St Clare's Primary School",
+                text: "St Clare's Primary School"
+              },
+              {
+                value: "St John's Primary School",
+                text: "St John's Primary School"
+              },
+              {
+                value: "St Joseph's Primary School",
+                text: "St Joseph's Primary School"
+              },
+              {
+                value: "St Mark's Primary School",
+                text: "St Mark's Primary School"
+              },
+              {
+                value: "St Thomas' Primary School",
+                text: "St Thomas' Primary School"
+              },
+              {
+                value: "Thornliebank Primary School",
+                text: "Thornliebank Primary School"
+              },
+              {
+                value: "Uplawmoor Primary School",
+                text: "Uplawmoor Primary School"
+              },
+              {
+                value: "None",
+                text: "None"
+              }
+            ]
+          }) }}
 
 
       {{ govukButton({
