--- a/app/views/forms/education/sibling-name1.html
+++ b/app/views/forms/education/sibling-name1.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Catchment school
+  Sibling's name
 {% endblock %}
 
 {% block content %}
@@ -10,27 +10,36 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Do you know your catchment school?
+          What is your oldest child's name?
       </h1>
       <form class="form" method="post">
+      <p>If your child will have more than one sibling at the school, enter the name of the oldest one.</p>
+
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
         label: {
-          text: "Enter the name of your catchment school"
+          text: "Oldest child's first name"
         },
-        hint: {
-          text: "Leave blank if you don't know."
-        },
-        classes: "govuk-input--width-20",
-        id: "catchment-school-manual",
-        name: "catchment-school-manual"
+        id: "oldest-first-name",
+        name: "oldest-first-name",
+        value: data['oldest-first-name']
       }) }}
+
+      {{ govukInput({
+        label: {
+          text: "Oldest child's last name"
+        },
+        id: "oldest-last-name",
+        name: "oldest-last-name",
+        value: data['oldest-last-name']
+      }) }}
+
 
       {{ govukButton({
         "text": "Continue"
         }) }}
-    </form>
+      </form>
     </div>
 </div>
 
